@@ -18,19 +18,30 @@
 #ifndef MAGICKCORE_MEMORY_PRIVATE_H
 #define MAGICKCORE_MEMORY_PRIVATE_H
 
+#include "MagickCore/magick-config.h"
+
 #if defined(__cplusplus) || defined(c_plusplus)
 extern "C" {
 #endif
 
-#include "MagickCore/exception-private.h"
-
 #if defined(__powerpc__)
-#  define CACHE_LINE_SIZE  (16*sizeof(void *))
+#  define CACHE_LINE_SIZE  (16 * MAGICKCORE_SIZEOF_VOID_P)
 #else
-#  define CACHE_LINE_SIZE  (8*sizeof(void *))
+#  define CACHE_LINE_SIZE  (8 * MAGICKCORE_SIZEOF_VOID_P)
 #endif
 
-#define CacheAlign(size)  ((size) < CACHE_LINE_SIZE ? CACHE_LINE_SIZE : (size))
+#define IS_BAD_CACHE_LINE_SIZE \
+  CACHE_LINE_SIZE <= 0 \
+    || (CACHE_LINE_SIZE % MAGICKCORE_SIZEOF_VOID_P) != 0 \
+      || MAGICKCORE_IS_NOT_POWER_OF_2(CACHE_LINE_SIZE/MAGICKCORE_SIZEOF_VOID_P)
+
+#if IS_BAD_CACHE_LINE_SIZE
+#  error "CACHE_LINE_SIZE must be greater than zero, and a multiple of `sizeof(void *)', and a power of 2."
+#endif
+
+#undef IS_BAD_CACHE_LINE_SIZE
+
+#define CACHE_ALIGNED(n) MAGICKCORE_ALIGN_UP(n,CACHE_LINE_SIZE)
 
 #if (__GNUC__ > 4) || ((__GNUC__ == 4) && (__GNUC_MINOR__ > 6))
 #if !defined(__ICC)
@@ -43,29 +54,9 @@ extern "C" {
 #define MagickAssumeAligned(address)  (address)
 #endif
 
-MagickExport MagickBooleanType 
-  HeapOverflowSanityCheck(const size_t,const size_t);
-
-MagickExport size_t
-  GetMaxMemoryRequest(void);
-
 extern MagickPrivate void
   ResetMaxMemoryRequest(void),
   ResetVirtualAnonymousMemory(void);
-
-static inline void *AcquireCriticalMemory(const size_t size)
-{
-  register void
-    *memory;
- 
-  /*
-    Fail if memory request cannot be fulfilled.
-  */
-  memory=AcquireMagickMemory(size);
-  if (memory == (void *) NULL)
-    ThrowFatalException(ResourceLimitFatalError,"MemoryAllocationFailed");
-  return(memory);
-}
 
 #if defined(__cplusplus) || defined(c_plusplus)
 }
