@@ -18,6 +18,9 @@
 #ifndef MAGICKCORE_MEMORY_H
 #define MAGICKCORE_MEMORY_H
 
+#include <errno.h>
+#include <assert.h>
+
 #if defined(__cplusplus) || defined(c_plusplus)
 extern "C" {
 #endif
@@ -36,11 +39,15 @@ extern MagickExport MemoryInfo
   *AcquireVirtualMemory(const size_t,const size_t) magick_alloc_sizes(1,2),
   *RelinquishVirtualMemory(MemoryInfo *);
 
+extern MagickExport size_t
+  GetMaxMemoryRequest(void);
+
 extern MagickExport void
   *AcquireAlignedMemory(const size_t,const size_t)
     magick_attribute((__malloc__)) magick_alloc_sizes(1,2),
   *AcquireMagickMemory(const size_t) magick_attribute((__malloc__))
     magick_alloc_size(1),
+  *AcquireCriticalMemory(const size_t),
   *AcquireQuantumMemory(const size_t,const size_t)
     magick_attribute((__malloc__)) magick_alloc_sizes(1,2),
   *CopyMagickMemory(void *magick_restrict,const void *magick_restrict,
@@ -60,6 +67,38 @@ extern MagickExport void
     RelinquishAlignedMemoryHandler),
   SetMagickMemoryMethods(AcquireMemoryHandler,ResizeMemoryHandler,
     DestroyMemoryHandler);
+
+inline MagickExport MagickBooleanType HeapOverflowSanityCheck(
+  const size_t count,const size_t quantum)
+{
+  if ((count == 0) || (quantum == 0))
+    return(MagickTrue);
+  if (quantum != ((count*quantum)/count))
+    {
+      errno=ENOMEM;
+      return(MagickTrue);
+    }
+  return(MagickFalse);
+}
+
+inline MagickExport MagickBooleanType HeapOverflowSanityCheckGetExtent(
+  const size_t count,const size_t quantum,size_t *const extent)
+{
+  size_t
+    length;
+
+  if ((count == 0) || (quantum == 0))
+    return(MagickTrue);
+  length=count*quantum;
+  if (quantum != (length/count))
+    {
+      errno=ENOMEM;
+      return(MagickTrue);
+    }
+  assert(extent);
+  *extent=length;
+  return(MagickFalse);
+}
 
 #if defined(__cplusplus) || defined(c_plusplus)
 }
